@@ -1,0 +1,3 @@
+cdl_component CYGHWR_HAL_POWERPC_MPC8XX {
+    user_value 862P
+};
