@@ -1,3 +1,12 @@
+2003-12-21  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/viper.S: Only clear caches on non-RAM startup.  This is to
+	help solve a problem with network debug connections.  It seems 
+	that messing with the caches during startup confuses the CPM.
+
+	* misc/viper2_862P.ecm: New file, used to describe a Viper with
+	a PPC862P processor (very rare)
+
 2003-12-08  Gary Thomas  <gary@mlbassoc.com>
 
 	* cdl/hal_powerpc_viper.cdl: 
